fixed prevent flickering page

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -21,7 +21,7 @@ a {
   --button-radius: 0.3em;
 }
 
-@media (prefers-color-scheme: dark) {
+/* @media (prefers-color-scheme: dark) {
   html[data-theme='dark'] {
     --bg-clr: hsl(252, 10%, 10%);
     --primary-clr: hsl(39, 43%, 90%);
@@ -62,4 +62,4 @@ html[data-theme='dark'] {
 body {
   background-color: var(--bg-clr);
   color: var(--primary-clr);
-}
+} */
